--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,10 @@
 @import "common/style";
+
+@import "fonts/font-awesome";
+
 @import "intro";
 @import "pages/footer";
 @import "pages/header";
+
 
 
