--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,9 @@
 @import "common/style";
-
+@import "vendor/swiper";
+@import "vendor/bootstrap";
+@import 'vendor/rodal';
+@import 'vendor/rc-slider';
+@import 'vendor/share';
 @import "fonts/font-awesome";
 
 @import "intro";
