--- a/app/styles/pages/home.scss
+++ b/app/styles/pages/home.scss
@@ -1,3 +1,4 @@
+/*轮播图*/
 .homepage-banner-slider {
   width: 100%;
   height: 500px;
@@ -60,7 +61,77 @@
 .homepage-banner-slider_pagination .swiper-pagination-bullet-active {
   background-color: #3CAAE6;
 }
-
+/*首页今日热门样式*/
+.home-todayHot{
+  margin:0 auto;
+  margin-top:30px;
+  max-width:1300px;
+  h3{
+    font-size:20px;
+    color:#000;
+    font-weight:400;
+    text-align:left;
+    display:inline-block;
+    margin:0;
+  }
+  .look-more{
+    float:right;
+    display:inline-block;
+    height:20px;
+    line-height:20px;
+    color:#AAAAAA;
+    font-size:16px;
+  }
+  .title-bottom{
+    display:inline-block;
+    height:6px;
+    width:30px;
+    background:#FFD100;
+    margin:12px 0;
+  }
+  .todayHot-list{
+    .today-hot-item{
+      margin-right:20px;
+    }
+    .today-hot-item:last-child{
+      margin-right:0;
+    }
+    .hot-img-box{
+      position:relative;
+      img{
+        width:244px;
+        height:260px;
+        object-fit: cover;
+      }
+    }
+    .hot-info{
+      width:244px;
+      height:90px;
+      background:#fff;
+      padding:20px;
+      span{
+        display:inline-block;
+        font-size:22px;
+        color:#323232;
+      }
+      img{
+        width:24px;
+        height:22px;
+        object-fit:cover;
+        float:right;
+        vertical-align: top;
+        margin-top:4px;
+        cursor:pointer;
+      }
+      h4{
+        font-size:16px;
+        color:#BBBBBB;
+        margin-bottom:0;
+        margin-top:8px;
+      }
+    }
+  }
+}
 
 
 
