--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,7 @@
 @import 'vendor/rodal';
 @import 'vendor/rc-slider';
 @import 'vendor/share';
-@import "fonts/font-awesome";
+@import "fonts/iconfont";
 
 @import "intro";
 @import "pages/footer";
